Fixing colors and alignment of verses

--- a/projects/Sweet-Dreams-Lyrics/style.css
+++ b/projects/Sweet-Dreams-Lyrics/style.css
@@ -4,15 +4,51 @@
 }
 
 body {
-    background-color: #7c4dff;
+    background-color: #8c63ff;
+    padding: 20px;
+    font-family: 'Segoe UI';
 }
 
-p {
-    display: block;
-    text-align: center;
-    max-width: 400px;
-}
 
 .background-audio {
     display: none;
+}
+
+main {
+    width: 100%;
+    text-align: center;
+}
+
+main h1 {
+    margin-bottom: 20px;
+    color: #5335a7;
+    background-color: rgb(126, 89, 232);
+    box-shadow: 0px 2px 10px rgba(86, 55, 170, 0.74);
+    text-align: center;
+}
+
+main section div {
+    background-color: rgb(145, 107, 255);;
+    width: 40vw;
+    max-width: 800px;
+    margin-bottom: 10px;
+    box-shadow: 0px 2px 5px rgb(126, 89, 232);
+    padding: 5px;
+}
+
+main section div p {
+    font-size: 1.2em;
+    margin-bottom: 8px;
+    color: white;
+    font-weight: 600;
+}
+
+main section div span {
+    color: rgba(55, 34, 111, 0.95);
+}
+
+.music-lyrics {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
